# Novomatic

./: .gitignore  CMakeLists.txt  README.md  build.bat  mainCollision.cpp  mainCompress.cpp  mainTicketomat.cpp
Collision/: Collision.cpp  Collision.hpp
Compress/: Compress.cpp  Compress.hpp
Ticketomat/: Ticketomat.cpp  Ticketomat.hpp
